# sam-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  justfile  main.py  pyproject.toml
.github/workflows/: build_container.yml  docker_image_build.yml  mypy.yml  pylint.yml  pytest.yml
Old/: SAMbot.py  helper.py
sam_bot/: __init__.py  __main__.py  misp.py
test_misp/: docker-compose.yml
tests/: test_config.py
